--- a/yourCamping/src/main/webapp/resources/style.css
+++ b/yourCamping/src/main/webapp/resources/style.css
@@ -284,7 +284,7 @@ div.paging {
 	text-align: center;
 	margin: 20px auto;
 }
-iv.map_list {
+div.map_list {
 	display: flex; 
 	height: 700px; 
 	width: 1200px; 
