--- a/yourCamping/src/main/webapp/resources/style.css
+++ b/yourCamping/src/main/webapp/resources/style.css
@@ -46,7 +46,6 @@ div#loading-icon {
 
 /* home.jsp CSS */
 div.homeMain {
-	background-image: url("${cpath}/resources/home_back.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: 0 -600px;
@@ -86,8 +85,7 @@ div.mainIcon>div:hover {
 }
 
 /* 	camping_list CSS */
-div#listSearchContainer {
-	background-image: url("${cpath}/resources/list_back.jpg");
+div.listSearchContainer {
 	background-repeat: no-repeat;
 	background-size: 100%;
 	background-position: 0 -900px;
@@ -96,7 +94,7 @@ div#listSearchContainer {
 	margin-bottom: 30px;
 }
 
-div#listSearchBox {
+div.listSearchBox {
 	margin: auto;
 	border: 2px solid black;
 	border-radius: 25px;
@@ -108,38 +106,38 @@ div#listSearchBox {
 	background-color: rgba(255, 255, 255, 0.7);
 }
 
-div#listSearchBox span {
+div.listSearchBox span {
 	display: block;
 }
 
-div#listSearchBox select {
+div.listSearchBox select {
 	width: 150px;
 }
 
-div#listSearch>div {
+div.listSearch>div {
 	margin: 10px;
 }
 
-div#keywordBox {
+div.keywordBox {
 	display: flex;
 	padding-left: 10px;
 	margin-top: 50px;
 }
 
-div#keywordBox input[type=text] {
+div.keywordBox input[type=text] {
 	width: 300px;
 }
 
-div#keywordBox>input, div#keywordBox>div:last-child>input {
+div.keywordBox>input, div.keywordBox>div:last-child>input {
 	margin-left: 10px;
 }
 
-div#keywordBox>div:last-child {
+div.keywordBox>div:last-child {
 	display: flex;
 	align-items: flex-end;
 }
 
-div#keywordBox>input {
+div.keywordBox>input {
 	height: 30px;
 	margin-top: 20px;
 }
@@ -286,14 +284,82 @@ div.paging {
 	text-align: center;
 	margin: 20px auto;
 }
+div.map_list {
+	display: flex; 
+	height: 700px; 
+	width: 1200px; 
+	margin: auto; 
+	margin-top: 30px;
+	position: relative;
+}
+div.map_paging {
+	position: absolute; 
+	top: 95.5%;
+	border-top: 1px solid grey;
+	display:flex; 
+	height:30px; 
+	width:310px; 
+	background-color:#fafbfe;
+}
 
+div.map_pagingNon {
+	position: absolute; 
+	top: 95.5%;
+	border-top: none;
+	display:flex; 
+	height:30px; 
+	width:310px; 
+	background-color:#fafbfe;
+}
 div.paging>button {
 	opacity: 0.1;
 }
+button.map_showListBtn {
+	margin-left: 1375px;	
+}
+ul.map_ul {
+	list-style:none; 
+	padding-left:0; 
+	height:120px; 
+	width:300px; 
+	border-bottom:1px solid #eee; 
+	margin:0; 
+	padding:15px;
+}
 
 /* view CSS */
+div.view_imgTable{
+	display: flex; 
+	margin:auto; 
+	margin-top: 50px; 
+	width: 1300px;
+}
+div.view_date {
+	display: flex;
+}
+div.view_dateStart{
+	margin-right: 15px;
+}
+div.view_reserveBtn {
+	margin-left: 15px;
+	margin-top: 20px;
+}
+button#view_prev {
+	z-index: 10;
+	height: fit-content;
+	background-color: white;
+	margin-left:15px;
+	margin-right:45%;
+	margin-top: 31%; 
+}
+button#view_next{
+	z-index: 10;
+	height: fit-content;
+	background-color: white;
+	margin-left:45%;
+	margin-top: 31%; 
+}
 div#view_TopWrap {
-	background-image: url("${cpath}/resources/home_back1.jpeg");
 	color: white;
 	height: 200px;
 	background-repeat: no-repeat;
@@ -302,10 +368,25 @@ div#view_TopWrap {
 	display: flex;
 	align-items: center;
 }
+div.view_imgTable{
+	display: flex; 
+	margin: auto; 
+	margin-top: 20px; 
+	width: 1200px;
+}
 
 div#view_TopWrap>div.sb {
 	width: 65%;
 	margin: auto;
+}
+
+div.campingNm {
+	display: flex;
+}
+
+div.campingNm > span#bookmark {
+	font-size: 1.5em;
+	cursor: pointer;
 }
 
 h1#view_Facltnm {
@@ -389,7 +470,7 @@ table#modify_table td {
 }
 
 /* reservation css */
-div.reservationWrap div {
+/* div.reservationWrap div {
 	color: black;
 }
 
@@ -505,4 +586,4 @@ div.reservationWrap .group:after {
 	content: "";
 	display: table;
 	clear: both;
-}
+} */
