confirm, reservation 수정, 사이트 이름 변경

--- a/yourCamping/src/main/webapp/resources/style.css
+++ b/yourCamping/src/main/webapp/resources/style.css
@@ -321,7 +321,7 @@ div.paging>button {
 	opacity: 0.1;
 }
 button.map_showListBtn {
-	margin-left: 1375px;	
+	margin-right: 320px;
 }
 ul.map_ul {
 	list-style:none; 
