userModal, ajaxController 수정
userModal : 버튼 텍스트 수정, 버튼 넓이 통일
ajaxController : 메일 보내는 메서드 메일 제목에 [Bear Camping] 추가

--- a/yourCamping/src/main/webapp/resources/style.css
+++ b/yourCamping/src/main/webapp/resources/style.css
@@ -354,10 +354,11 @@ div.view_reserveBtn {
 button#view_prev {
 	z-index: 10;
 	height: fit-content;
-	background-color: white;
 	margin-left:15px;
-	margin-right:45%;
-	margin-top: 31%; 
+/* 	margin-right:45%; */
+/* 	margin-top: 31%;  */
+	position: absolute;
+	top: 50%;
 	background-color: #ffc107; 
 	color:white; 
 	border:none;
@@ -366,12 +367,15 @@ button#view_prev {
 button#view_next{
 	z-index: 10;
 	height: fit-content;
-	background-color: white;
-	margin-left:45%;
-	margin-top: 31%; 
+/* 	margin-left:45%; */
+/* 	margin-top: 31%;  */
+	position: absolute;
+	top: 50%;
+	right: 1.5%;
 	background-color: #ffc107; 
 	color:white; 
 	border:none;
+	font-weight: bolder;
 }
 
 div#view_TopWrap {
