--- a/yourCamping/src/main/webapp/resources/style.css
+++ b/yourCamping/src/main/webapp/resources/style.css
@@ -321,7 +321,8 @@ div.paging>button {
 	opacity: 0.1;
 }
 button.map_showListBtn {
-	margin-right: 320px;
+	justify-content: flex-end;
+	margin-right: 17%;
 }
 ul.map_ul {
 	list-style:none; 
