--- a/yourCamping/src/main/webapp/resources/style.css
+++ b/yourCamping/src/main/webapp/resources/style.css
@@ -6,12 +6,8 @@
 }
 
 a {
-	text-decoration: none;
 	color: inherit;
-}
-
-a:hover {
-	text-decoration: underline;
+	text-decoration: none;
 }
 
 .sb {
@@ -46,7 +42,6 @@ div#loading-icon {
 
 /* home.jsp CSS */
 div.homeMain {
-	background-image: url("${cpath}/resources/home_back.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: 0 -600px;
@@ -57,6 +52,11 @@ div.homeMain {
 	margin-bottom: 100px;
 }
 
+div#home_SearchBox {
+	height: 400px;
+	background-image: linear-gradient(180deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.2));
+}
+
 div.mainIcon {
 	display: flex;
 	justify-content: space-evenly;
@@ -64,7 +64,7 @@ div.mainIcon {
 }
 
 div.mainIcon>div {
-	background-color: rgba(255, 255, 255, 0.7);
+	background-color: rgba(255, 255, 255, 0.9);
 	width: 120px;
 	height: 120px;
 	border: 2px solid black;
@@ -86,8 +86,7 @@ div.mainIcon>div:hover {
 }
 
 /* 	camping_list CSS */
-div#listSearchContainer {
-	background-image: url("${cpath}/resources/list_back.jpg");
+div.listSearchContainer {
 	background-repeat: no-repeat;
 	background-size: 100%;
 	background-position: 0 -900px;
@@ -96,7 +95,7 @@ div#listSearchContainer {
 	margin-bottom: 30px;
 }
 
-div#listSearchBox {
+div.listSearchBox {
 	margin: auto;
 	border: 2px solid black;
 	border-radius: 25px;
@@ -108,38 +107,38 @@ div#listSearchBox {
 	background-color: rgba(255, 255, 255, 0.7);
 }
 
-div#listSearchBox span {
+div.listSearchBox span {
 	display: block;
 }
 
-div#listSearchBox select {
+div.listSearchBox select {
 	width: 150px;
 }
 
-div#listSearch>div {
+div.listSearch>div {
 	margin: 10px;
 }
 
-div#keywordBox {
+div.keywordBox {
 	display: flex;
 	padding-left: 10px;
 	margin-top: 50px;
 }
 
-div#keywordBox input[type=text] {
+div.keywordBox input[type=text] {
 	width: 300px;
 }
 
-div#keywordBox>input, div#keywordBox>div:last-child>input {
+div.keywordBox>input, div.keywordBox>div:last-child>input {
 	margin-left: 10px;
 }
 
-div#keywordBox>div:last-child {
+div.keywordBox>div:last-child {
 	display: flex;
 	align-items: flex-end;
 }
 
-div#keywordBox>input {
+div.keywordBox>input {
 	height: 30px;
 	margin-top: 20px;
 }
@@ -287,13 +286,102 @@ div.paging {
 	margin: 20px auto;
 }
 
+div.map_list {
+	display: flex; 
+	height: 700px; 
+	width: 1300px; 
+	margin: auto; 
+	margin-top: 30px;
+	position: relative;
+}
+div.map_paging {
+	position: absolute; 
+	top: 95.5%;
+	border-top: 1px solid grey;
+	border-bottom: 1px solid grey;
+	display:flex; 
+	height:30px; 
+	width:350px; 
+	background-color:#fafbfe;
+}
+div.map_result {
+	margin: 55px;
+	text-align: center;
+}
+div.map_pagingNon {
+	position: absolute; 
+	top: 95.5%;
+	border-top: none;
+	display:flex; 
+	height:30px; 
+	width:310px; 
+	background-color:#fafbfe;
+}
 div.paging>button {
 	opacity: 0.1;
 }
+button.map_showListBtn {
+	justify-content: flex-end;
+	margin-right: 17%;
+}
+ul.map_ul {
+	list-style:none; 
+	padding-left:0; 
+	height:120px; 
+	width:350px; 
+	border-bottom:1px solid #bbb; 
+	margin:0; 
+	padding:15px;
+}
 
 /* view CSS */
+div.view_imgTable{
+	display: flex; 
+	margin:auto; 
+	margin-top: 50px; 
+	width: 1300px;
+}
+div.view_date {
+	display: flex;
+}
+div.view_dateStart{
+	margin-right: 15px;
+}
+div.view_reserveBtn {
+	margin-left: 15px;
+	margin-top: 25px;
+}
+
+button#view_prev {
+    z-index: 10;
+    height: fit-content;
+    padding:10px;
+    position: absolute;
+	top: 50%;
+    background-color: #white; 
+    opacity: 50%;
+    color:black; 
+    font-weight:bold;
+    border:none;
+    font-size: 1.2em; 
+}
+
+button#view_next{
+    z-index: 10;
+    height: fit-content;
+    padding:10px;
+    position: absolute;
+	top: 50%;
+	right: 1.5%;
+    background-color: #white; 
+    opacity: 50%;
+    color:black; 
+    font-weight:bold;
+    border:none;
+    font-size: 1.2em; 
+}
+
 div#view_TopWrap {
-	background-image: url("${cpath}/resources/home_back1.jpeg");
 	color: white;
 	height: 200px;
 	background-repeat: no-repeat;
@@ -303,9 +391,24 @@ div#view_TopWrap {
 	align-items: center;
 }
 
+button.userDelete {
+	background-color: #ffc107; 
+	color:white; 
+	border:none;
+}
+
 div#view_TopWrap>div.sb {
-	width: 65%;
+	width: 70%;
 	margin: auto;
+}
+
+div.campingNm {
+	display: flex;
+}
+
+div.campingNm > span#bookmark {
+	font-size: 1.5em;
+	cursor: pointer;
 }
 
 h1#view_Facltnm {
@@ -356,6 +459,7 @@ img.rounded {
 	position: absolute;
 	opacity: 0;
 	transition: opacity 0.5s ease-in-out;
+	margin-top: 35px;
 }
 
 img.active {
@@ -364,6 +468,7 @@ img.active {
 
 table#week {
 	text-align: center;
+	margin-bottom: 30px;
 }
 
 /* mypage css */
@@ -387,122 +492,7 @@ table#modify_table td {
 	text-align: center;
 	vertical-align: middle;
 }
-
-/* reservation css */
-div.reservationWrap div {
-	color: black;
-}
-
-@import "compass/css3";
-
-* {
-	box-sizing: border-box;
-}
-
-div.reservationWrap {
-	padding: 2em;
-	font-family: Arial, sans-serif;
-	font-weight: normal;
-	color: #888;
-}
-
-div.reservationWrap .dates-wrapper {
-	background: #f0f0f0;
-	padding: 1em 1em 0 1em;
-	display: inline-block;
-}
-
-div.reservationWrap .input-text {
-	background-color: #ffffff;
-	padding: 2px 10px;
-	color: #333;
-	border: 1px solid #dddddd;
-	outline: none;
-	vertical-align: middle;
-	height: 36px;
-	border-radius: 0;
-	display: block;
-	width: 100%;
-	-webkit-appearance: none;
-	-webkit-box-shadow: none;
-	-moz-box-shadow: none;
-}
-
-div.reservationWrap .date-wrapper {
-	position: relative;
-	margin: 0 42px 10px 0;
-	display: inline-block;
-	color: #444;
-	font-weight: bold; . label { float : left;
-	display: inline-block;
-	margin-right: 28px;
-	padding-top: 10px;
-}
-
-div.reservationWrap .input {
-	font-size: 15px;
-	color: #333;
-	max-width: 172px;
-	float: left;
-	margin-right: 10px; input { float : left;
-	width: 100%;
-	padding: 2px 10px;
-}
-
-}
-div.reservationWrap .calendar-btn {
-	display: inline-block;
-	width: 36px;
-	height: 36px;
-	border-radius: 18px;
-	float: left;
-	background-repeat: no-repeat;
-	background-size: 36px 36px;
-}
-
-}
-div.reservationWrap .pika-single {
-	position: absolute;
-	top: 40px;
-	left: 0px;
-}
-
-div.reservationWrap .pika-title {
-	color: #444;
-}
-
-div.reservationWrap .is-selected .pika-button {
-	border-radius: 0;
-	box-shadow: none;
-	background: #ec0000;
-}
-
-div.reservationWrap .pika-table tbody td {
-	border: 1px solid #b9b9b9;
-}
-
-div.reservationWrap .pika-button:hover {
-	border-radius: 0 !important;
-	box-shadow: none !important;
-	background: #868686 !important;
-}
-
-div.reservationWrap .is-today .pika-button {
-	color: #FF7043;
-}
-
-div.reservationWrap .is-today.is-selected .pika-button {
-	color: #8BC34A;
-}
-
-div.reservationWrap .hide-text {
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-}
-
-div.reservationWrap .group:after {
-	content: "";
-	display: table;
-	clear: both;
+.footer_width {
+	width: 1500px;
+	margin: auto;
 }
